--- a/src/elements/components/MovieCardPopUp/MovieCardPopUp.module.scss
+++ b/src/elements/components/MovieCardPopUp/MovieCardPopUp.module.scss
@@ -12,8 +12,9 @@
 
 
     .popup {
-        width:80%;
-        height:80vh;
+        width: 80%;
+        height: 80vh;
+        overflow-y: auto;
         border-radius: 10px;
         text-align: center;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
