--- a/src/elements/components/LoginButton/LoginButton.module.scss
+++ b/src/elements/components/LoginButton/LoginButton.module.scss
@@ -8,4 +8,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    color: var(--bs-body-bg);
+    text-transform: uppercase;
+    cursor: pointer;
+    font-size: 20px;
  }
