--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,3 +11,19 @@
 body{
     scroll-behavior: smooth;
 }
+.loadding{
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    z-index: 10011;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(-50%);
+    background: linear-gradient(180deg, transparent, #282828);
+    width: 100%;
+    padding: 1rem;
+}
+.dropdown-item{
+    padding: 1rem .5rem;
+}
